--- a/src/popup.css
+++ b/src/popup.css
@@ -5,6 +5,7 @@
     src: local('Acme Regular'), local('Acme-Regular'), url(Acme-Regular.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 body {
     font-size: 12px;
     width: 320px;
@@ -86,13 +87,14 @@ input::selection {
 .container .list {
     position: absolute;
     top: 0;
+    width: 100%;
 }
 
 .overflow-hidden {
     overflow-y: hidden;
 }
 
-.container .emoji {
+.emoji {
     cursor: pointer;
     transform: scale(1);
     transition: transform .2s ease-in-out;
@@ -106,16 +108,15 @@ input::selection {
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    -o-user-select: none;
 }
 
-.container .emoji:hover {
+.emoji:hover {
     background-color: #FFFFFF;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16);
     transform: scale(1.2);
 }
 
-.container .emoji:active {
+.emoji:active {
     background-color: #f4f4f4;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
 }
