--- a/src/popup.css
+++ b/src/popup.css
@@ -124,18 +124,21 @@ input::selection {
 #badge {
     font-family: "Lucida Console", Monaco, monospace;
     text-align: center;
-    width: 120px;
+    width: 100%;
     margin: 0 auto;
     padding: 6px;
     position: fixed;
-    top: -50px;
+    bottom: -3rem;
     left: 0;
     right: 0;
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    background-color: #fafafa;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+    z-index: 98;
 }
 
 #badge.active {
-    top: 9px;
+    bottom: 0;
 }
 
 #badge img {
